--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pongify Tournament</title>
+    <title>Tournament Scheduler</title>
     <style>
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
       body {
         font-family: Arial, sans-serif;
+        font-size: 18px; /* Default font size for larger screens */
+        background-color: #121212; /* Dark background */
+        color: #f5f5f5; /* Light text */
+      }
+      main {
+        padding: 20px;
       }
       .form-group {
         margin-bottom: 1em;
@@ -17,6 +28,9 @@
         width: 100%;
         padding: 0.5em;
         font-size: 1em;
+        background-color: #2b2b2b; /* Dark input fields */
+        color: #f5f5f5; /* Light text */
+        border: 1px solid #f5f5f5; /* Light border */
       }
       #schedule {
         margin-top: 2em;
@@ -25,45 +39,77 @@
         width: 100%;
         margin-top: 2em;
         border-collapse: collapse;
+        color: #f5f5f5; /* Light text */
+      }
+      th {
+        background-color: #2b2b2b; /* Dark header */
+        color: #f5f5f5; /* Light text */
       }
       th,
       td {
-        border: 1px solid #000;
-        padding: 0.5em;
+        border: 1px solid #ddd;
+        padding: 8px;
         text-align: center;
+      }
+      button {
+        background-color: #4caf50; /* Green */
+        border: none;
+        color: white;
+        padding: 12px 24px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 4px; /* Rounded corners */
+        transition: all 0.3s ease; /* Smooth transition for hover effect */
+      }
+
+      button:hover {
+        background-color: #45a049; /* Darker green */
+      }
+      @media screen and (max-width: 600px) {
+        table {
+          font-size: 14px;
+        }
       }
     </style>
   </head>
   <body>
-    <h1>Pongify Tournament</h1>
-    <div class="form-group">
-      <label for="numPlayers">Enter number of players from (2-5):</label>
-      <input type="number" id="numPlayers" min="2" max="5" />
-    </div>
-    <div id="playerInputs"></div>
-    <div class="form-group">
-      <label for="numRounds">Enter number of rounds from (1-3):</label>
-      <input type="number" id="numRounds" min="1" max="3" />
-    </div>
-    <button onclick="generateSchedule()">Generate Schedule</button>
-    <div id="schedule"></div>
+    <main>
+      <h1>Syed's Tournament Scheduler</h1>
+      <div class="form-group">
+        <label for="numPlayers"
+          >Enter number of players/teams from (2-5):</label
+        >
+        <input type="number" id="numPlayers" min="2" max="5" />
+      </div>
+      <div id="playerInputs"></div>
+      <div class="form-group">
+        <label for="numRounds">Enter number of rounds from (1-3):</label>
+        <input type="number" id="numRounds" min="1" max="3" />
+      </div>
+      <button onclick="generateSchedule()">Generate Schedule</button>
+      <div id="schedule"></div>
 
-    <div id="matchInputs"></div>
-    <button onclick="calculateResults()">Calculate Results</button>
-    <table id="pointsTable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>W</th>
-          <th>L</th>
-          <th>PF</th>
-          <th>PA</th>
-          <th>PD</th>
-          <th>Points</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+      <div id="matchInputs"></div>
+      <button onclick="calculateResults()">Calculate Results</button>
+      <table id="pointsTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>W</th>
+            <th>L</th>
+            <th>PF</th>
+            <th>PA</th>
+            <th>PD</th>
+            <th>Points</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </main>
 
     <script>
       const numPlayersInput = document.getElementById("numPlayers");
@@ -78,6 +124,49 @@
       let players = [];
       let combinations = [];
 
+      // Function to validate player inputs
+      function validateNumPlayersInput() {
+        const numPlayers = numPlayersInput.value;
+        const isValid =
+          !isNaN(numPlayers) && numPlayers >= 2 && numPlayers <= 5;
+        numPlayersInput.style.borderColor = isValid ? "" : "red";
+        return isValid;
+      }
+
+      // Function to validate round inputs
+      function validateNumRoundsInput() {
+        const numRounds = numRoundsInput.value;
+        const isValid = !isNaN(numRounds) && numRounds >= 1 && numRounds <= 3;
+        numRoundsInput.style.borderColor = isValid ? "" : "red";
+        return isValid;
+      }
+
+      // Function to validate match scores
+      function validateMatchScores() {
+        const matchInputs =
+          matchInputsDiv.querySelectorAll("input[type=number]");
+        let isValid = true;
+        matchInputs.forEach(function (input) {
+          const score = parseInt(input.value);
+          if (isNaN(score) || score < 0) {
+            input.style.borderColor = "red";
+            isValid = false;
+          } else {
+            input.style.borderColor = "";
+          }
+        });
+        return isValid;
+      }
+
+      // Function to validate all inputs
+      function validateInputs() {
+        return (
+          validateNumPlayersInput() &&
+          validateNumRoundsInput() &&
+          validateMatchScores()
+        );
+      }
+
       numPlayersInput.addEventListener("change", function () {
         const numPlayers = numPlayersInput.value;
         playerInputsDiv.innerHTML = "";
@@ -85,7 +174,7 @@
           const div = document.createElement("div");
           div.className = "form-group";
           const label = document.createElement("label");
-          label.textContent = `Enter player name ${i + 1}:`;
+          label.textContent = `Enter player/team ${i + 1} name:`;
           const input = document.createElement("input");
           input.id = `player${i + 1}`;
           div.appendChild(label);
@@ -94,7 +183,14 @@
         }
       });
 
+      numPlayersInput.addEventListener("input", validateNumPlayersInput);
+      numRoundsInput.addEventListener("input", validateNumRoundsInput);
+
       function generateSchedule() {
+        if (!validateInputs()) {
+          return;
+        }
+
         players = [];
         const numPlayers = numPlayersInput.value;
         const numRounds = numRoundsInput.value;
@@ -111,6 +207,8 @@
           }
         }
         scheduleDiv.innerHTML = "";
+        matchInputsDiv.innerHTML = "";
+
         combinations.forEach(function (combination, index) {
           const p = document.createElement("p");
           p.textContent = `Match ${index + 1}: ${combination[0]} vs ${
@@ -125,8 +223,14 @@
           } vs ${combination[1]}`;
           const input1 = document.createElement("input");
           input1.id = `match${index + 1}player1Score`;
+          input1.type = "number";
+          input1.addEventListener("input", validateMatchScores);
+
           const input2 = document.createElement("input");
           input2.id = `match${index + 1}player2Score`;
+          input2.type = "number";
+          input2.addEventListener("input", validateMatchScores);
+
           div.appendChild(label);
           div.appendChild(input1);
           div.appendChild(document.createTextNode(" vs "));
@@ -136,6 +240,10 @@
       }
 
       function calculateResults() {
+        if (!validateInputs()) {
+          return;
+        }
+
         const numMatches = matchInputsDiv.children.length;
         const pointsTable = players.map(function (player) {
           return {
