--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         box-sizing: border-box;
       }
       body {
-        font-family: Arial, sans-serif;
-        font-size: 18px; /* Default font size for larger screens */
-        background-color: #121212; /* Dark background */
-        color: #f5f5f5; /* Light text */
-      }
+  font-family: Arial, sans-serif !important;
+  font-size: 20pt !important; /* Increase font size */
+  background-color: #121212 !important; /* Dark background */
+  color: #f5f5f5 !important; /* Light text */
+}
       main {
         padding: 20px;
       }
@@ -65,20 +65,29 @@
         border-radius: 4px; /* Rounded corners */
         transition: all 0.3s ease; /* Smooth transition for hover effect */
       }
-
       button:hover {
         background-color: #45a049; /* Darker green */
       }
-      @media screen and (max-width: 600px) {
-        table {
-          font-size: 14px;
-        }
-      }
+      /* Responsive styles */
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 16pt !important; /* Adjust font size for smaller screens */
+  }
+
+  .form-group input {
+    width: 100% !important;
+  }
+
+  table {
+    width: 100% !important;
+    font-size: 14pt !important;
+  }
+}
     </style>
   </head>
   <body>
     <main>
-      <h1>Syed's Tournament Scheduler</h1>
+      <h2>Syed's Tournament Scheduler</h4>
       <div class="form-group">
         <label for="numPlayers"
           >Enter number of players/teams from (2-5):</label
