style: responsive main container

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   color: #f5f5f5 !important; /* Light text */
 }
       main {
-  padding: 20px;
-  width: 50%;
+  padding: 25px;
+  width: 50vw;
   margin: 0 auto;
 }
       .form-group {
@@ -73,7 +73,8 @@
       /* Responsive styles */
       @media (max-width: 992px) {
   main {
-    width: 80%;
+    width: 80vw;
+    margin: 0 5px;
   }
 }
       
@@ -82,7 +83,8 @@
     font-size: 16pt !important; /* Adjust font size for smaller screens */
   }
   main {
-    width: 100%;
+    padding: 0;
+    width: 100vw;
   }
   .form-group input {
     width: 100% !important;
