--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <title>Tournament Scheduler</title>
     <style>
       *,
-      *::before,
-      *::after {
+      *::after,
+      *::before {
         box-sizing: border-box;
       }
       body {
-  font-family: Arial, sans-serif !important;
-  font-size: 20pt !important; /* Increase font size */
-  background-color: #121212 !important; /* Dark background */
-  color: #f5f5f5 !important; /* Light text */
-}
+        font-family: Arial, sans-serif !important;
+        font-size: 20pt !important;
+        /* Increase font size */
+        background-color: #121212 !important;
+        /* Dark background */
+        color: #f5f5f5 !important;
+        /* Light text */
+      }
       main {
-  padding: 25px;
-  width: 50vw;
-  margin: 0 auto;
-}
+        padding: 25px;
+        width: 50vw;
+        margin: 0 auto;
+      }
       .form-group {
         margin-bottom: 1em;
       }
@@ -30,9 +33,12 @@
         width: 100%;
         padding: 0.5em;
         font-size: 1em;
-        background-color: #2b2b2b; /* Dark input fields */
-        color: #f5f5f5; /* Light text */
-        border: 1px solid #f5f5f5; /* Light border */
+        background-color: #2b2b2b;
+        /* Dark input fields */
+        color: #f5f5f5;
+        /* Light text */
+        border: 1px solid #f5f5f5;
+        /* Light border */
       }
       input[type="number"] {
         width: 300px;
@@ -41,20 +47,24 @@
         width: 100%;
         margin-top: 2em;
         border-collapse: collapse;
-        color: #f5f5f5; /* Light text */
+        color: #f5f5f5;
+        /* Light text */
       }
       th {
-        background-color: #2b2b2b; /* Dark header */
-        color: #f5f5f5; /* Light text */
+        background-color: #2b2b2b;
+        /* Dark header */
+        color: #f5f5f5;
+        /* Light text */
       }
-      th,
-      td {
+      td,
+      th {
         border: 1px solid #ddd;
         padding: 8px;
         text-align: center;
       }
       button {
-        background-color: #4caf50; /* Green */
+        background-color: #4caf50;
+        /* Green */
         border: none;
         color: white;
         padding: 12px 24px;
@@ -64,37 +74,41 @@
         font-size: 16px;
         margin: 4px 2px;
         cursor: pointer;
-        border-radius: 4px; /* Rounded corners */
-        transition: all 0.3s ease; /* Smooth transition for hover effect */
+        border-radius: 4px;
+        /* Rounded corners */
+        transition: all 0.3s ease;
+        /* Smooth transition for hover effect */
       }
       button:hover {
-        background-color: #45a049; /* Darker green */
+        background-color: #45a049;
+        /* Darker green */
       }
       /* Responsive styles */
       @media (max-width: 992px) {
-  main {
-    width: 80vw;
-    margin: 0 5px;
-  }
-}
-      
-@media screen and (max-width: 600px) {
-  body {
-    font-size: 16pt !important; /* Adjust font size for smaller screens */
-  }
-  main {
-    padding: 0;
-    width: 100vw;
-  }
-  .form-group input {
-    width: 100% !important;
-  }
+        main {
+          width: 80vw;
+          margin: 0 5px;
+        }
+      }
 
-  table {
-    width: 100% !important;
-    font-size: 14pt !important;
-  }
-}
+      @media screen and (max-width: 600px) {
+        body {
+          font-size: 16pt !important;
+          /* Adjust font size for smaller screens */
+        }
+        main {
+          padding: 0;
+          width: 100vw;
+        }
+        .form-group input {
+          width: 100% !important;
+        }
+
+        table {
+          width: 100% !important;
+          font-size: 14pt !important;
+        }
+      }
     </style>
   </head>
   <body>
@@ -104,12 +118,12 @@
         <label for="numPlayers"
           >Enter number of players/teams from (2-9):</label
         >
-        <input type="number" id="numPlayers" min="2" max="9" />
+        <input type="number" id="numPlayers" min="2" max="9"/>
       </div>
       <div id="playerInputs"></div>
       <div class="form-group">
         <label for="numRounds">Enter number of rounds from (1-3):</label>
-        <input type="number" id="numRounds" min="1" max="3" />
+        <input type="number" id="numRounds" min="1" max="3"/>
       </div>
       <button onclick="generateSchedule()">Generate Schedule</button>
       <hr>
@@ -148,12 +162,14 @@
       let players = [];
       let combinations = [];
 
+      {# VALIDATION #}
       // Function to validate player inputs
       function validateNumPlayersInput() {
         const numPlayers = numPlayersInput.value;
-        const isValid =
-          !isNaN(numPlayers) && numPlayers >= 2 && numPlayers <= 9;
-        numPlayersInput.style.borderColor = isValid ? "" : "red";
+        const isValid = !isNaN(numPlayers) && numPlayers >= 2 && numPlayers <= 9;
+        numPlayersInput.style.borderColor = isValid
+          ? ""
+          : "red";
         return isValid;
       }
 
@@ -161,14 +177,15 @@
       function validateNumRoundsInput() {
         const numRounds = numRoundsInput.value;
         const isValid = !isNaN(numRounds) && numRounds >= 1 && numRounds <= 3;
-        numRoundsInput.style.borderColor = isValid ? "" : "red";
+        numRoundsInput.style.borderColor = isValid
+          ? ""
+          : "red";
         return isValid;
       }
 
       // Function to validate match scores
       function validateMatchScores() {
-        const matchInputs =
-          matchInputsDiv.querySelectorAll("input[type=number]");
+        const matchInputs = matchInputsDiv.querySelectorAll("input[type=number]");
         let isValid = true;
         matchInputs.forEach(function (input) {
           const score = parseInt(input.value);
@@ -184,15 +201,13 @@
 
       // Function to validate all inputs
       function validateInputs() {
-        return (
-          validateNumPlayersInput() &&
-          validateNumRoundsInput() &&
-          validateMatchScores()
-        );
+        return (validateNumPlayersInput() && validateNumRoundsInput() && validateMatchScores());
       }
 
       function shuffle(array) {
-        var currentIndex = array.length, temporaryValue, randomIndex;
+        var currentIndex = array.length,
+          temporaryValue,
+          randomIndex;
         while (0 !== currentIndex) {
           // random number 0-1
           randomIndex = Math.floor(Math.random() * currentIndex);
@@ -203,27 +218,29 @@
           array[randomIndex] = temporaryValue;
         }
         return array;
-}
+      }
 
       numPlayersInput.addEventListener("change", function () {
-      const numPlayers = numPlayersInput.value;
-      playerInputsDiv.innerHTML = "";
-      for (let i = 0; i < numPlayers; i++) {
-        const div = document.createElement("div");
-        div.className = "form-group";
-        const label = document.createElement("label");
-        label.textContent = `Enter player/team ${i + 1} name:`;
-        const input = document.createElement("input");
-        input.id = `player${i + 1}`;
-        div.appendChild(label);
-        div.appendChild(input);
-        playerInputsDiv.appendChild(div);
-      }
-      // Set focus on the first newly created input box
-      if (numPlayers > 0) {
-        document.getElementById(`player1`).focus();
-      }
-    });
+        const numPlayers = numPlayersInput.value;
+        playerInputsDiv.innerHTML = "";
+        for (let i = 0; i < numPlayers; i++) {
+          const div = document.createElement("div");
+          div.className = "form-group";
+          const label = document.createElement("label");
+          label.textContent = `Enter player/team ${i + 1} name:`;
+          const input = document.createElement("input");
+          input.id = `player${i + 1}`;
+          div.appendChild(label);
+          div.appendChild(input);
+          playerInputsDiv.appendChild(div);
+        }
+        // Set focus on the first newly created input box
+        if (numPlayers > 0) {
+          document
+            .getElementById(`player1`)
+            .focus();
+        }
+      });
 
       numPlayersInput.addEventListener("input", validateNumPlayersInput);
       numRoundsInput.addEventListener("input", validateNumRoundsInput);
@@ -240,32 +257,81 @@
           const playerInput = document.getElementById(`player${i + 1}`);
           players.push(playerInput.value);
         }
+
+        // Generate all possible combinations for each round
         combinations = [];
-          for (let i = 0; i < numRounds; i++) {
-            for (let j = 0; j < players.length; j++) {
-              for (let k = j + 1; k < players.length; k++) {
-                combinations.push([players[j], players[k]]);
-              }
+        for (let i = 0; i < numRounds; i++) {
+          for (let j = 0; j < players.length; j++) {
+            for (let k = j + 1; k < players.length; k++) {
+              combinations.push([
+                players[j], players[k]
+              ]);
             }
           }
+        }
+
         // Shuffle the combinations
         combinations = shuffle(combinations);
 
+        let schedule = [];
+        let playerMatchCount = {};
+        players.forEach(player => playerMatchCount[player] = 0);
+
+        while (combinations.length > 0) {
+          let addedMatch = false;
+          for (let i = 0; i < combinations.length; i++) {
+            let match = combinations[i];
+            let [player1, player2] = match;
+
+            // Ensure the same players don't face each other consecutively
+            if (schedule.length > 0) {
+              let lastMatch = schedule[schedule.length - 1];
+              if ((lastMatch[0] === player1 && lastMatch[1] === player2) || (lastMatch[0] === player2 && lastMatch[1] === player1)) {
+                continue;
+              }
+            }
+
+            // Ensure no player has more than two matches in a row
+            if (playerMatchCount[player1] >= 2 || playerMatchCount[player2] >= 2) {
+              continue;
+            }
+
+            schedule.push(match);
+            playerMatchCount[player1] += 1;
+            playerMatchCount[player2] += 1;
+
+            // Reset match count for players not involved in the current match
+            for (let player of players) {
+              if (player !== player1 && player !== player2) {
+                playerMatchCount[player] = 0;
+              }
+            }
+
+            // Remove this match from combinations
+            combinations.splice(i, 1);
+            addedMatch = true;
+            break;
+          }
+
+          // If no match could be added without breaking the constraints, stop to avoid infinite loop
+          if (!addedMatch) {
+            break;
+          }
+        }
+
+        // Display the schedule
         scheduleDiv.innerHTML = "";
         matchInputsDiv.innerHTML = "";
 
-        combinations.forEach(function (combination, index) {
+        schedule.forEach(function (combination, index) {
           const p = document.createElement("p");
-          p.textContent = `Match ${index + 1}: ${combination[0]} vs ${
-            combination[1]
-          }`;
+          p.textContent = `Match ${index + 1}: ${combination[0]} vs ${combination[1]}`;
           scheduleDiv.appendChild(p);
+
           const div = document.createElement("div");
           div.className = "form-group";
           const label = document.createElement("label");
-          label.innerHTML = `Enter score for Match ${index + 1}: <br>${
-            combination[0]
-          } vs ${combination[1]}`;
+          label.innerHTML = `Enter score for Match ${index + 1}: <br>${combination[0]} vs ${combination[1]}`;
           const input1 = document.createElement("input");
           input1.id = `match${index + 1}player1Score`;
           input1.type = "number";
@@ -275,7 +341,7 @@
           const input2 = document.createElement("input");
           input2.id = `match${index + 1}player2Score`;
           input2.type = "number";
-          input2.style.width = "200px"; 
+          input2.style.width = "200px";
           input2.addEventListener("input", validateMatchScores);
 
           div.appendChild(label);
@@ -287,70 +353,76 @@
       }
 
       function calculateResults() {
-  if (!validateInputs()) {
-    return;
-  }
+        if (!validateInputs()) {
+          return;
+        }
 
-  const numMatches = matchInputsDiv.children.length;
-  const pointsTable = players.map(function (player) {
-    return {
-      name: player,
-      W: 0,
-      L: 0,
-      PF: 0,
-      PA: 0,
-      PD: 0,
-      Points: 0,
-    };
-  });
-  for (let i = 0; i < numMatches; i++) {
-    const player1ScoreInput = document.getElementById(
-      `match${i + 1}player1Score`
-    );
-    const player2ScoreInput = document.getElementById(
-      `match${i + 1}player2Score`
-    );
-    const player1Score = parseInt(player1ScoreInput.value);
-    const player2Score = parseInt(player2ScoreInput.value);
-    const player1 = pointsTable.find(function (player) {
-      return player.name === combinations[i][0];
-    });
-    const player2 = pointsTable.find(function (player) {
-      return player.name === combinations[i][1];
-    });
-    player1.PF += player1Score;
-    player1.PA += player2Score;
-    player1.PD = player1.PF - player1.PA;
-    player2.PF += player2Score;
-    player2.PA += player1Score;
-    player2.PD = player2.PF - player2.PA;
-    if (player1Score > player2Score) {
-      player1.W++;
-      player1.Points += 3;
-      player2.L++;
-    } else {
-      player2.W++;
-      player2.Points += 3;
-      player1.L++;
-    }
-  }
-  pointsTable.sort((a, b) => {
-    if (b.Points !== a.Points) {
-      return b.Points - a.Points;
-    }
-    return b.PD - a.PD;
-  });
-  pointsTableBody.innerHTML = "";
-  pointsTable.forEach(function (player) {
-    const tr = document.createElement("tr");
-    Object.values(player).forEach(function (value) {
-      const td = document.createElement("td");
-      td.textContent = value;
-      tr.appendChild(td);
-    });
-    pointsTableBody.appendChild(tr);
-  });
-}
+        const numMatches = matchInputsDiv.children.length;
+        const pointsTable = players.map(function (player) {
+          return {
+            name: player,
+            W: 0,
+            L: 0,
+            PF: 0,
+            PA: 0,
+            PD: 0,
+            Points: 0
+          };
+        });
+
+        for (let i = 0; i < numMatches; i++) {
+          const player1ScoreInput = document.getElementById(`match${i + 1}player1Score`);
+          const player2ScoreInput = document.getElementById(`match${i + 1}player2Score`);
+          const player1Score = parseInt(player1ScoreInput.value);
+          const player2Score = parseInt(player2ScoreInput.value);
+
+          const match = scheduleDiv.querySelector(`p:nth-child(${i + 1})`).textContent.split(": ")[1].split(" vs ");
+          const player1Name = match[0];
+          const player2Name = match[1];
+
+          const player1 = pointsTable.find(function (player) {
+            return player.name === player1Name;
+          });
+          const player2 = pointsTable.find(function (player) {
+            return player.name === player2Name;
+          });
+
+          player1.PF += player1Score;
+          player1.PA += player2Score;
+          player1.PD = player1.PF - player1.PA;
+          player2.PF += player2Score;
+          player2.PA += player1Score;
+          player2.PD = player2.PF - player2.PA;
+
+          if (player1Score > player2Score) {
+            player1.W++;
+            player1.Points += 3;
+            player2.L++;
+          } else {
+            player2.W++;
+            player2.Points += 3;
+            player1.L++;
+          }
+        }
+
+        pointsTable.sort((a, b) => {
+          if (b.Points !== a.Points) {
+            return b.Points - a.Points;
+          }
+          return b.PD - a.PD;
+        });
+
+        pointsTableBody.innerHTML = "";
+        pointsTable.forEach(function (player) {
+          const tr = document.createElement("tr");
+          Object.values(player).forEach(function (value) {
+            const td = document.createElement("td");
+            td.textContent = value;
+            tr.appendChild(td);
+          });
+          pointsTableBody.appendChild(tr);
+        });
+      }
     </script>
   </body>
 </html>
