fix: the validation comment syntax

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       let players = [];
       let combinations = [];
 
-      {# VALIDATION #}
+      // VALIDATION
       // Function to validate player inputs
       function validateNumPlayersInput() {
         const numPlayers = numPlayersInput.value;
