feat: if the score is the same neither of the teams gets any points

--- a/index.html
+++ b/index.html
@@ -398,6 +398,10 @@
             player1.W++;
             player1.Points += 3;
             player2.L++;
+          } else if (player1Score == player2Score){
+            player2.W;
+            player2.Points;
+            player1.L;
           } else {
             player2.W++;
             player2.Points += 3;
