--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div id="playerInputs"></div>
       <div class="form-group">
         <label for="numRounds">Enter number of rounds from (1-4):</label>
-        <input type="number" id="numRounds" min="1" max="3"/>
+        <input type="number" id="numRounds" min="1" max="4"/>
       </div>
       <button onclick="generateSchedule()">Generate Schedule</button>
       <hr>
@@ -177,11 +177,10 @@
       function validateNumRoundsInput() {
         const numRounds = numRoundsInput.value;
         const isValid = !isNaN(numRounds) && numRounds >= 1 && numRounds <= 4;
-        numRoundsInput.style.borderColor = isValid
-          ? ""
-          : "red";
+        numRoundsInput.style.borderColor = isValid ? "" : "red";
         return isValid;
       }
+
 
       // Function to validate match scores
       function validateMatchScores() {
