--- a/index.html
+++ b/index.html
@@ -113,17 +113,15 @@
   </head>
   <body>
     <main>
-      <h2>Syed's Tournament Scheduler</h4>
+      <h2>Syed's Tournament Scheduler</h2>
       <div class="form-group">
-        <label for="numPlayers"
-          >Enter number of players/teams from (2-9):</label
-        >
+        <label for="numPlayers">Enter number of players/teams from (2-9):</label>
         <input type="number" id="numPlayers" min="2" max="9"/>
       </div>
       <div id="playerInputs"></div>
       <div class="form-group">
         <label for="numRounds">Enter number of rounds from (1-4):</label>
-        <input type="number" id="numRounds" min="1" max="4"/>
+        <input type="number" id="numRounds" min="1" max="4"/> <!-- Updated to 4 -->
       </div>
       <button onclick="generateSchedule()">Generate Schedule</button>
       <hr>
@@ -155,34 +153,26 @@
       const numRoundsInput = document.getElementById("numRounds");
       const scheduleDiv = document.getElementById("schedule");
       const matchInputsDiv = document.getElementById("matchInputs");
-      const pointsTableBody = document
-        .getElementById("pointsTable")
-        .querySelector("tbody");
+      const pointsTableBody = document.getElementById("pointsTable").querySelector("tbody");
 
       let players = [];
       let combinations = [];
 
       // VALIDATION
-      // Function to validate player inputs
       function validateNumPlayersInput() {
         const numPlayers = numPlayersInput.value;
         const isValid = !isNaN(numPlayers) && numPlayers >= 2 && numPlayers <= 9;
-        numPlayersInput.style.borderColor = isValid
-          ? ""
-          : "red";
+        numPlayersInput.style.borderColor = isValid ? "" : "red";
         return isValid;
       }
 
-      // Function to validate round inputs
       function validateNumRoundsInput() {
         const numRounds = numRoundsInput.value;
-        const isValid = !isNaN(numRounds) && numRounds >= 1 && numRounds <= 4;
+        const isValid = !isNaN(numRounds) && numRounds >= 1 && numRounds <= 4;  // Allow up to 4 rounds
         numRoundsInput.style.borderColor = isValid ? "" : "red";
         return isValid;
       }
 
-
-      // Function to validate match scores
       function validateMatchScores() {
         const matchInputs = matchInputsDiv.querySelectorAll("input[type=number]");
         let isValid = true;
@@ -198,9 +188,8 @@
         return isValid;
       }
 
-      // Function to validate all inputs
       function validateInputs() {
-        return (validateNumPlayersInput() && validateNumRoundsInput() && validateMatchScores());
+        return validateNumPlayersInput() && validateNumRoundsInput() && validateMatchScores();
       }
 
       function shuffle(array) {
@@ -208,10 +197,8 @@
           temporaryValue,
           randomIndex;
         while (0 !== currentIndex) {
-          // random number 0-1
           randomIndex = Math.floor(Math.random() * currentIndex);
           currentIndex -= 1;
-          // And swap
           temporaryValue = array[currentIndex];
           array[currentIndex] = array[randomIndex];
           array[randomIndex] = temporaryValue;
@@ -233,11 +220,8 @@
           div.appendChild(input);
           playerInputsDiv.appendChild(div);
         }
-        // Set focus on the first newly created input box
         if (numPlayers > 0) {
-          document
-            .getElementById(`player1`)
-            .focus();
+          document.getElementById(`player1`).focus();
         }
       });
 
@@ -250,26 +234,57 @@
         }
 
         players = [];
-        const numPlayers = numPlayersInput.value;
-        const numRounds = numRoundsInput.value;
+        const numPlayers = parseInt(numPlayersInput.value);
+        const numRounds = parseInt(numRoundsInput.value);
         for (let i = 0; i < numPlayers; i++) {
           const playerInput = document.getElementById(`player${i + 1}`);
           players.push(playerInput.value);
         }
 
-        // Generate all possible combinations for each round
+        // Handle special case for 2 players
+        if (numPlayers === 2) {
+          scheduleDiv.innerHTML = "";
+          matchInputsDiv.innerHTML = "";
+          for (let i = 0; i < numRounds; i++) {
+            const p = document.createElement("p");
+            p.textContent = `Match ${i + 1}: ${players[0]} vs ${players[1]}`;
+            scheduleDiv.appendChild(p);
+
+            const div = document.createElement("div");
+            div.className = "form-group";
+            const label = document.createElement("label");
+            label.innerHTML = `Enter score for Match ${i + 1}: <br>${players[0]} vs ${players[1]}`;
+            const input1 = document.createElement("input");
+            input1.id = `match${i + 1}player1Score`;
+            input1.type = "number";
+            input1.style.width = "200px";
+            input1.addEventListener("input", validateMatchScores);
+
+            const input2 = document.createElement("input");
+            input2.id = `match${i + 1}player2Score`;
+            input2.type = "number";
+            input2.style.width = "200px";
+            input2.addEventListener("input", validateMatchScores);
+
+            div.appendChild(label);
+            div.appendChild(input1);
+            div.appendChild(document.createTextNode(" vs "));
+            div.appendChild(input2);
+            matchInputsDiv.appendChild(div);
+          }
+          return;
+        }
+
+        // For more than 2 players, use the original scheduling logic
         combinations = [];
         for (let i = 0; i < numRounds; i++) {
           for (let j = 0; j < players.length; j++) {
             for (let k = j + 1; k < players.length; k++) {
-              combinations.push([
-                players[j], players[k]
-              ]);
+              combinations.push([players[j], players[k]]);
             }
           }
         }
 
-        // Shuffle the combinations
         combinations = shuffle(combinations);
 
         let schedule = [];
@@ -282,7 +297,6 @@
             let match = combinations[i];
             let [player1, player2] = match;
 
-            // Ensure the same players don't face each other consecutively
             if (schedule.length > 0) {
               let lastMatch = schedule[schedule.length - 1];
               if ((lastMatch[0] === player1 && lastMatch[1] === player2) || (lastMatch[0] === player2 && lastMatch[1] === player1)) {
@@ -290,7 +304,6 @@
               }
             }
 
-            // Ensure no player has more than two matches in a row
             if (playerMatchCount[player1] >= 2 || playerMatchCount[player2] >= 2) {
               continue;
             }
@@ -299,26 +312,22 @@
             playerMatchCount[player1] += 1;
             playerMatchCount[player2] += 1;
 
-            // Reset match count for players not involved in the current match
             for (let player of players) {
               if (player !== player1 && player !== player2) {
                 playerMatchCount[player] = 0;
               }
             }
 
-            // Remove this match from combinations
             combinations.splice(i, 1);
             addedMatch = true;
             break;
           }
 
-          // If no match could be added without breaking the constraints, stop to avoid infinite loop
           if (!addedMatch) {
             break;
           }
         }
 
-        // Display the schedule
         scheduleDiv.innerHTML = "";
         matchInputsDiv.innerHTML = "";
 
@@ -356,10 +365,9 @@
           return;
         }
 
-        const numMatches = matchInputsDiv.children.length;
-        const pointsTable = players.map(function (player) {
-          return {
-            name: player,
+        let results = {};
+        players.forEach(player => {
+          results[player] = {
             W: 0,
             L: 0,
             PF: 0,
@@ -369,63 +377,47 @@
           };
         });
 
-        for (let i = 0; i < numMatches; i++) {
-          const player1ScoreInput = document.getElementById(`match${i + 1}player1Score`);
-          const player2ScoreInput = document.getElementById(`match${i + 1}player2Score`);
-          const player1Score = parseInt(player1ScoreInput.value);
-          const player2Score = parseInt(player2ScoreInput.value);
+        const numRounds = parseInt(numRoundsInput.value);
+        for (let i = 0; i < numRounds; i++) {
+          const player1Score = parseInt(document.getElementById(`match${i + 1}player1Score`).value);
+          const player2Score = parseInt(document.getElementById(`match${i + 1}player2Score`).value);
 
-          const match = scheduleDiv.querySelector(`p:nth-child(${i + 1})`).textContent.split(": ")[1].split(" vs ");
-          const player1Name = match[0];
-          const player2Name = match[1];
+          const player1 = players[0];
+          const player2 = players[1];
 
-          const player1 = pointsTable.find(function (player) {
-            return player.name === player1Name;
-          });
-          const player2 = pointsTable.find(function (player) {
-            return player.name === player2Name;
-          });
-
-          player1.PF += player1Score;
-          player1.PA += player2Score;
-          player1.PD = player1.PF - player1.PA;
-          player2.PF += player2Score;
-          player2.PA += player1Score;
-          player2.PD = player2.PF - player2.PA;
+          results[player1].PF += player1Score;
+          results[player1].PA += player2Score;
+          results[player2].PF += player2Score;
+          results[player2].PA += player1Score;
 
           if (player1Score > player2Score) {
-            player1.W++;
-            player1.Points += 3;
-            player2.L++;
-          } else if (player1Score == player2Score){
-            player2.W;
-            player2.Points;
-            player1.L;
-          } else {
-            player2.W++;
-            player2.Points += 3;
-            player1.L++;
+            results[player1].W += 1;
+            results[player2].L += 1;
+          } else if (player2Score > player1Score) {
+            results[player2].W += 1;
+            results[player1].L += 1;
           }
+
+          results[player1].PD = results[player1].PF - results[player1].PA;
+          results[player2].PD = results[player2].PF - results[player2].PA;
         }
 
-        pointsTable.sort((a, b) => {
-          if (b.Points !== a.Points) {
-            return b.Points - a.Points;
-          }
-          return b.PD - a.PD;
-        });
-
         pointsTableBody.innerHTML = "";
-        pointsTable.forEach(function (player) {
-          const tr = document.createElement("tr");
-          Object.values(player).forEach(function (value) {
-            const td = document.createElement("td");
-            td.textContent = value;
-            tr.appendChild(td);
-          });
-          pointsTableBody.appendChild(tr);
+        players.forEach(player => {
+          const row = document.createElement("tr");
+          row.innerHTML = `
+            <td>${player}</td>
+            <td>${results[player].W}</td>
+            <td>${results[player].L}</td>
+            <td>${results[player].PF}</td>
+            <td>${results[player].PA}</td>
+            <td>${results[player].PD}</td>
+            <td>${results[player].W * 2}</td>
+          `;
+          pointsTableBody.appendChild(row);
         });
       }
     </script>
   </body>
 </html>
+
